# gl_sandbox

./: .gitignore  CMakeLists.txt  cmake_create_project.cmd
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/shaders/: simple.fs  simple.glsl  standard.fs  standard.vs  texture_mix.fs  texture_mix.vs  textured_no_color.fs  textured_no_color.vs  textured_transform.fs  textured_transform.vs  transform.vs
android/app/src/main/cpp/: CMakeLists.txt  Log.h  Renderer.cpp  Renderer.h  RendererOpenGL.cpp
android/app/src/main/cpp/Math/: Vector.h
android/app/src/main/cpp/Render/: Shader.cpp  Shader.h
android/app/src/main/java/com/android/glrenderer/: GLMainActivity.java  GameJNILib.java  MainSurfaceView.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/shaders/: simple.fs  simple.vs  standard.fs  standard.vs  texture_mix.fs  texture_mix.vs  textured_no_color.fs  textured_no_color.vs  textured_transform.fs  textured_transform.vs  transform.vs
cmake/: android_config.cmake  config.cmake  win_config.cmake
engine/src/: AndroidUtils.cpp  AndroidUtils.h  AppDelegate.h  Application.h  ApplicationAndroid.cpp  ApplicationAndroid.h  ApplicationBase.cpp  ApplicationBase.h  ApplicationWindows.cpp  ApplicationWindows.h  EngineIncludes.h  Log.cpp  Log.h  Renderer.cpp  Renderer.h  RendererOpenGL.cpp  Timer.cpp  Timer.h  Utils.cpp  Utils.h  glutils.cpp  glutils.h  stb_image.cpp  stb_image.h
engine/src/Render/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/src/Render/OpenGL/: RendererOpenGL.cpp  RendererOpenGL.h
sandbox/src/: EntryPoint.cpp
sandbox/src/application/: SandboxApp.cpp  SandboxApp.h  geometry.cpp  geometry.h
sandbox/src/platform/android/: EntryPoint.cpp
sandbox/src/platform/windows/: EntryPoint.cpp
